[package]
name = "libvcx_core"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
fatal_warnings = []

[dependencies]
num-traits = "0.2.0"
once_cell = { version = "1.15" }
cfg-if = { version = "1.0" }
env_logger = "0.10.0"
log = "0.4.16"
chrono = "0.4.23"
time = "0.3.20"
lazy_static = "1.3"
libc = "0.2.148"
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
futures = { version = "0.3", default-features = false }
aries-vcx = { path = "../aries_vcx", features = ["credx", "vdrtools_wallet"] }
aries_vcx_core = { path = "../aries_vcx_core" }
diddoc_legacy = { path = "../diddoc_legacy" }
thiserror = "1.0.37"
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
agency_client = { path = "../agency_client" }
async-trait = "0.1.61"
url = "2.3.1"
wallet_migrator = { path = "../wallet_migrator" }
shared_vcx = { path = "../shared_vcx" }

[dev-dependencies]
test_utils = {path = "../tools/test_utils" }
tokio = { version = "1.20", features = [ "rt", "macros" ] }
