[package]
name = "libvdrtools"
version = "0.8.6"
authors = ["Evernym"]
edition = "2018"

description = "A library that facilitates building standards compliant and interoperable solutions for self-sovereign identity by abstracting the operations for interacting with a verifiable data registry as defined by Hyperledger Aries."
license = "Apache-2.0"

[lib]
name = "vdrtools"
path = "src/lib.rs"

[features]
default = ["base58_bs58", "pair_amcl", "local_nodes_pool", "revocation_tests"]
base58_bs58 = ["bs58"]
pair_amcl = ["ursa"]
local_nodes_pool = []
revocation_tests = []
force_full_interaction_tests = []
sodium_static = []
only_high_cases = []
mysql_storage = []

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.42"
cfg-if = "1.0.0"
etcommon-rlp = "0.2.4"
failure = { version = "0.1.8", features = ["backtrace"] }
hex = "0.4.0"
libc = "0.2.114"
log = "0.4.8"
log-derive = "0.3.0"
rand = "0.8.4"
bs58 = { version = "0.4.0", optional = true }
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
sha2 = "0.9"
sha3 = "0.9"
rmp-serde = "0.13.7"
time = "0.1.44"
zmq = "0.9.2"
lazy_static = "1.3"
byteorder = "1.3.2"
log-panics = "2.0.0"
zeroize = "~1.3.0"
regex = "1.2.1"
indy-api-types = { path = "./indy-api-types"}
indy-utils = { path = "./indy-utils"}
indy-wallet = { path = "./indy-wallet"}
variant_count = "*"
num-traits = "0.2"
num-derive = "0.3"
convert_case = "0.3.2"
futures = { version = "0.3", default-features = false, features = [ "executor", "alloc", "thread-pool" ] }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
ursa = { version = "0.3.7", optional = true}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[dev-dependencies]
criterion = "0.2"
dirs = "2.0.2"
rstest = "0.6.4"
