[package]
name = "libvdrtools"
version = "0.8.6"
authors = ["Evernym"]
edition = "2018"

description = "A library that facilitates building standards compliant and interoperable solutions for self-sovereign identity by abstracting the operations for interacting with a verifiable data registry as defined by Hyperledger Aries."
license = "Apache-2.0"

[lib]
name = "vdrtools"
path = "src/lib.rs"

[features]
default = ["base58_bs58", "pair_amcl", "local_nodes_pool", "revocation_tests"]
base58_bs58 = ["bs58"]
pair_amcl = ["ursa"]
local_nodes_pool = []
revocation_tests = []
force_full_interaction_tests = []
sodium_static = []
only_high_cases = []
mysql_storage = []

# Causes the build to fail on all warnings
fatal_warnings = []

[dependencies]
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1"
failure = { version = "0.1", features = ["backtrace"] }
hex = "0.4"
libc = "0.2"
log = "0.4"
log-derive = "0.4"
bs58 = { version = "0.5", optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1"
zeroize = "1"
regex = "1"
indy-api-types = { path = "./indy-api-types"}
indy-utils = { path = "./indy-utils"}
indy-wallet = { path = "./indy-wallet"}
futures = { version = "0.3", default-features = false, features = [ "executor", "alloc", "thread-pool" ] }
ursa = { version = "0.3.7", optional = true, default-features = false, features = ["cl_native"] }

[dev-dependencies]
dirs = "5"
