[package]
name = "mediator"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aries-vcx = { path = "../aries_vcx" }
aries_vcx_core = { path = "../aries_vcx_core", features = ["vdrtools_wallet", "vdrtools_anoncreds"] }
async-trait = "0.1.73"
axum = "0.6"
axum-macros = "0.3.8"
cursive = { version = "0.20.0", features = ["crossterm-backend"] }
diddoc_legacy = { path = "../diddoc_legacy" }
dotenvy = "0.15"
env_logger = "0.10.0"
fast_qr = { version = "0.10.2", features = ["svg"] }
futures = "0.3.28"
libvdrtools = { path = "../libvdrtools" } # vdrtools
log = "0.4.20"
messages = { path = "../messages" }
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
serde_json = "1.0.106"
thiserror = "1.0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["catch-panic"] }
url = "2.4.1"
uuid = "1.4.1"
xum-test-server = { git = "https://github.com/nain-F49FF806/axum-test-server.git", branch = "aries-vcx-mediator-integration" }

[dev-dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.20", features = ["blocking"] }
