[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[features]
test_utils = []
general_test = ["test_utils", "tokio/rt", "tokio/macros"]

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
chrono = "0.4.19"
time = "0.1.36"
lazy_static = "1.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
url = "2.3"
regex = "1.1.0"
rust-base58 = "0.0.4"
base64 = "0.10"
num-traits = "0.2.0"
vdrtoolsrs = { git = "https://gitlab.com/left-arm/vdr-tools.git", rev = "aa446cb8d" }
uuid = {version = "0.8", default-features = false, features = ["v4"]}
failure = "0.1.6"
strum = "0.16.0"
strum_macros = "0.16.0"
derive_builder = "0.10.2"
tokio = { version = "1.15.0" }
