[package]
name = "messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
test_utils = []
general_test = ["test_utils"]

[dependencies]
chrono = "0.4.19"
time = "0.1.36"
lazy_static = "1.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
url = "2.3"
regex = "1.1.0"
base64 = "0.10"
uuid = {version = "0.8", default-features = false, features = ["v4"]}
strum = "0.16.0"
strum_macros = "0.16.0"
thiserror = "1.0.37"
bs58 = "0.4.0"
