[package]
name = "messages2"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
test_utils = ["diddoc/test_utils"]
general_test = ["test_utils"]

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
time = "0.3.17"
lazy_static = "1.3"
serde = "1.0.97"
serde_json = { version = "1.0.40", features = ["raw_value"] }
serde_derive = "1.0.97"
url = { version = "2.3", features = ["serde"] }
regex = "1.1.0"
base64 = "0.21.0"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
derive_more = "0.99.17"
transitive = "0.4.2"
isolang = { version = "2.2.0" }
messages_macros = { path = "../messages_macros" }
diddoc = { path = "../diddoc" }
