[package]
name = "messages2"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
test_utils = ["diddoc/test_utils"]
general_test = ["test_utils"]

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.3"
serde_json = "1.0.40"
url = { version = "2.3", features = ["serde"] }
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.37"
derive_more = "0.99.17"
transitive = "0.4.2"
isolang = { version = "2.2.0" }
messages_macros = { path = "../messages_macros" }
diddoc = { path = "../diddoc" }
