[package]
name = "shared_vcx"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
test_utils = []
general_test = ["test_utils"]

[dependencies]
lazy_static = "1.3"
regex = "1.1.0"
thiserror = "1.0.37"
bs58 = "0.4.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
