[package]

name = "aries_vcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
# Feature flag to include the 'modular library' dependencies (vdrtools alternatives; indy-vdr, indy-credx)
credx = [
    "aries_vcx_core/credx",
    "test_utils/vdrtools_wallet",
    "test_utils/credx"
]
anoncreds = ["aries_vcx_core/anoncreds", "test_utils/anoncreds", "test_utils/vdrtools_wallet"]
vdr_proxy_ledger = [
    "aries_vcx_core/vdr_proxy_ledger",
    "aries_vcx_wallet/vdrtools_wallet",
    "test_utils/vdr_proxy_ledger",
    "credx",
]
vdrtools_wallet = [
    "aries_vcx_wallet/vdrtools_wallet",
    "aries_vcx_core/vdrtools_wallet",
    "test_utils/vdrtools_wallet",
]
backtrace_errors = ["backtrace"]

# Feature for allowing legacy proof verification
legacy_proof = ["aries_vcx_core/legacy_proof"]

askar_wallet = [
    "aries_vcx_wallet/askar_wallet"
]

[dependencies]
messages = { path = "../messages" }
diddoc_legacy = { path = "../misc/legacy/diddoc_legacy" }
aries_vcx_core = { path = "../aries_vcx_core" }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
shared = { path = "../misc/shared" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
did_resolver = { path = "../../did_core/did_resolver" }
did_doc = { path = "../../did_core/did_doc" }
did_key = { path = "../../did_core/did_methods/did_key" }
public_key = { path = "../../did_core/public_key" }
did_peer = { path = "../../did_core/did_methods/did_peer" }
did_resolver_sov = { path = "../../did_core/did_methods/did_resolver_sov" }
did_resolver_registry = { path = "../../did_core/did_resolver_registry" }
bs58 = "0.5.0"
async-trait = "0.1.53"
env_logger = "0.10.0"
log = "0.4.16"
chrono = "0.4.23"
time = "0.3.20"
lazy_static = "1.3"
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
regex = "1.1.0"
base64 = "0.21.4"
sha2 = "0.10.7"
num-bigint = "0.4.3"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
strum = "0.25.0"
strum_macros = "0.25.2"
derive_builder = "0.12.0"
tokio = { version = "1.20.4" }
thiserror = "1.0.37"
url = { version = "2.3", features = ["serde"] }
backtrace = { optional = true, version = "0.3" }

[dev-dependencies]
test_utils = { path = "../misc/test_utils" }
wallet_migrator = { path = "../misc/wallet_migrator" }
async-channel = "1.7.1"
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread"] }
