[package]

name = "aries_vcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
# Feature flag to include the 'modular library' dependencies (vdrtools alternatives; indy-vdr, indy-credx)
credx = [
    "aries_vcx_anoncreds/credx",
    "test_utils/vdrtools_wallet",
    "test_utils/credx"
]
anoncreds = ["aries_vcx_anoncreds/anoncreds", "test_utils/anoncreds", "test_utils/vdrtools_wallet"]
vdr_proxy_ledger = [
    "aries_vcx_wallet/vdrtools_wallet",
    "test_utils/vdr_proxy_ledger",
    "credx",
]
vdrtools_wallet = [
    "aries_vcx_wallet/vdrtools_wallet",
    "test_utils/vdrtools_wallet",
]
backtrace_errors = ["backtrace"]

# Feature for allowing legacy proof verification
legacy_proof = ["aries_vcx_anoncreds/legacy_proof"]

askar_wallet = [
    "aries_vcx_wallet/askar_wallet"
]

[dependencies]
messages = { path = "../messages" }
diddoc_legacy = { path = "../misc/legacy/diddoc_legacy" }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
aries_vcx_anoncreds = { path = "../aries_vcx_anoncreds" }
aries_vcx_ledger = { path = "../aries_vcx_ledger" }
shared = { path = "../misc/shared" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
did_resolver = { path = "../../did_core/did_resolver" }
did_doc = { path = "../../did_core/did_doc" }
did_key = { path = "../../did_core/did_methods/did_key" }
public_key = { path = "../../did_core/public_key" }
did_peer = { path = "../../did_core/did_methods/did_peer" }
did_resolver_registry = { path = "../../did_core/did_resolver_registry" }
bs58 = "0.5.0"
async-trait = "0.1.53"
env_logger = "0.11.3"
log = "0.4.16"
chrono = "0.4.23"
time = "0.3.20"
lazy_static = "1.3"
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
regex = "1.1.0"
base64 = "0.22.1"
sha2 = "0.10.7"
num-bigint = "0.4.5"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
strum = "0.26.3"
strum_macros = "0.26.4"
derive_builder = "0.20.0"
tokio = { version = "1.38.0" }
thiserror = "1.0.37"
url = { version = "2.3", features = ["serde"] }
backtrace = { optional = true, version = "0.3" }

[dev-dependencies]
test_utils = { path = "../misc/test_utils" }
wallet_migrator = { path = "../misc/wallet_migrator" }
async-channel = "2.3.1"
tokio = { version = "1.38", features = ["rt", "macros", "rt-multi-thread"] }
pretty_assertions = "1.4.0"
did_resolver_sov = { path = "../../did_core/did_methods/did_resolver_sov" }
