[package]

name = "aries_vcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
anoncreds = [
    "aries_vcx_anoncreds/anoncreds",
    "test_utils/anoncreds",
    "test_utils/askar_wallet",
]
vdr_proxy_ledger = [
    "aries_vcx_wallet/askar_wallet",
    "test_utils/vdr_proxy_ledger",
]
backtrace_errors = ["backtrace"]

# Feature for allowing legacy proof verification
legacy_proof = ["aries_vcx_anoncreds/legacy_proof"]

askar_wallet = ["aries_vcx_wallet/askar_wallet"]

[dependencies]
messages = { path = "../messages" }
diddoc_legacy = { path = "../misc/legacy/diddoc_legacy" }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
aries_vcx_anoncreds = { path = "../aries_vcx_anoncreds" }
aries_vcx_ledger = { path = "../aries_vcx_ledger" }
shared = { path = "../misc/shared" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
did_resolver = { path = "../../did_core/did_resolver" }
did_doc = { path = "../../did_core/did_doc" }
did_key = { path = "../../did_core/did_methods/did_key" }
public_key = { path = "../../did_core/public_key" }
did_peer = { path = "../../did_core/did_methods/did_peer" }
did_resolver_registry = { path = "../../did_core/did_resolver_registry" }
bs58.workspace = true
async-trait.workspace = true
log.workspace = true
chrono.workspace = true
time.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
base64.workspace = true
sha2.workspace = true
num-bigint.workspace = true
futures = { workspace = true, default-features = false }
uuid = { workspace = true }
strum.workspace = true
strum_macros.workspace = true
derive_builder.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
url = { workspace = true, features = ["serde"] }
backtrace = { optional = true, workspace = true }

[dev-dependencies]
test_utils = { path = "../misc/test_utils" }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
pretty_assertions.workspace = true
did_resolver_sov = { path = "../../did_core/did_methods/did_resolver_sov" }
