[package]
name = "aries_vcx_anoncreds"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
anoncreds = ["dep:anoncreds"]
legacy_proof = []

[dependencies]
anoncreds = { workspace = true, optional = true }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
async-trait = "0.1.68"
thiserror = "1.0.40"
log = "0.4.17"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
time = "0.3.20"
bitvec = "1.0.1"
