[package]
name = "aries_vcx_anoncreds"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
anoncreds = ["dep:anoncreds"]
legacy_proof = []

[dependencies]
anoncreds = { workspace = true, optional = true }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
async-trait.workspace = true
thiserror.workspace = true
log.workspace = true
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time.workspace = true
