[package]
name = "aries_vcx_core"
version = "0.1.0"
edition = "2021"

[features]
########################## DEP FLAGS ################################
vdrtools_wallet = ["dep:libvdrtools", "dep:indy-api-types"]
# Feature flag to include the 'modular library' dependencies (vdrtools alternatives; indy-vdr, indy-credx)
credx = ["dep:indy-credx"]
vdr_proxy_ledger = ["credx", "dep:indy-vdr-proxy-client"]
# Feature flag to allow legacy proof verification
legacy_proof = []

[dependencies]
agency_client = { path = "../legacy/agency_client" }
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr.git", rev = "c143268", default-features = false, features = ["log"] }
indy-credx = { git = "https://github.com/hyperledger/indy-shared-rs", tag = "v1.1.0", optional = true }
libvdrtools = { path = "../legacy/libvdrtools", optional = true }
indy-api-types = { path = "../legacy/libvdrtools/indy-api-types", optional = true }
async-trait = "0.1.68"
futures = { version = "0.3", default-features = false }
serde_json = "1.0.95"
time = "0.3.20"
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"
log = "0.4.17"
thiserror = "1.0.40"
lazy_static = "1.4.0"
derive_builder = "0.12.0"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
tokio = { version = "1.20" }
indy-vdr-proxy-client = { git = "https://github.com/hyperledger/indy-vdr.git", rev = "c143268", optional = true }
indy-ledger-response-parser = { path = "../indy_ledger_response_parser" }
lru = { version = "0.12.0"  }

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread"] }
