[package]
name = "aries_vcx_ledger"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vdr_proxy_ledger = ["dep:indy-vdr-proxy-client"]

[dependencies]
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
thiserror = "1.0.40"
indy-vdr.workspace = true
indy-vdr-proxy-client = { workspace = true, optional = true }
serde_json = "1.0.95"
public_key = { path = "../../did_core/public_key"}
async-trait = "0.1.68"
time = "0.3.20"
indy-ledger-response-parser = { path = "../misc/indy_ledger_response_parser" }
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
lru = { version = "0.12.0"  }
tokio = { version = "1.38" }
