[package]
name = "aries_vcx_ledger"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vdr_proxy_ledger = ["dep:indy-vdr-proxy-client"]
cheqd = ["dep:did_cheqd", "dep:did_resolver", "dep:url"]

[dependencies]
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
thiserror.workspace = true
indy-vdr.workspace = true
indy-vdr-proxy-client = { workspace = true, optional = true }
did_cheqd = { path = "../../did_core/did_methods/did_cheqd", optional = true }
did_resolver = { path = "../../did_core/did_resolver", optional = true }
url = { workspace = true, optional = true }
serde_json.workspace = true
public_key = { path = "../../did_core/public_key" }
async-trait.workspace = true
time.workspace = true
indy-ledger-response-parser = { path = "../misc/indy_ledger_response_parser" }
log.workspace = true
serde = { workspace = true, features = ["derive"] }
lru.workspace = true
tokio.workspace = true
chrono = { workspace = true, default-features = false, features = ["alloc"] }
bitvec.workspace = true

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = [
    "macros",
    "rt",
] }
mockall.workspace = true
uuid = { workspace = true }
