[package]
name = "aries_vcx_wallet"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
askar_wallet = ["dep:aries-askar"]

[dependencies]
anyhow = "1.0"
aries-askar = { workspace = true, optional = true }
async-trait = "0.1.68"
bs58 = { version = "0.5" }
base64 = "0.22.1"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
public_key = { path = "../../did_core/public_key" }
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.38" }
typed-builder = "0.19.1"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.38", features = ["rt", "macros", "rt-multi-thread"] }
