[package]
name = "aries_vcx_wallet"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
askar_wallet = ["dep:aries-askar"]

[dependencies]
anyhow.workspace = true
aries-askar = { workspace = true, optional = true }
async-trait.workspace = true
bs58.workspace = true
base64.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
public_key = { path = "../../did_core/public_key" }
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
typed-builder.workspace = true
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
