[package]
name = "messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.3"
url = { version = "2.3", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.37"
derive_more = "0.99.17"
transitive = "1.0.1"
isolang = { version = "2.2.0" }
typed-builder = "0.19.1"
messages_macros = { path = "../messages_macros" }
diddoc_legacy = { path = "../misc/legacy/diddoc_legacy" }
shared = { path = "../misc/shared" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
display_as_json = { path = "../../misc/display_as_json" }
