[package]
name = "messages"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
lazy_static.workspace = true
url = { workspace = true, features = ["serde"] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
derive_more = { workspace = true, features = [
    "from",
    "try_into",
    "display",
    "error",
] }
transitive.workspace = true
isolang.workspace = true
typed-builder.workspace = true
messages_macros = { path = "../messages_macros" }
diddoc_legacy = { path = "../misc/legacy/diddoc_legacy" }
shared = { path = "../misc/shared" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
display_as_json = { path = "../../misc/display_as_json" }
