[package]
name = "messages_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = "2.0.16"
darling = "0.20.1"
shared = { path = "../shared" }
