[package]
name = "messages_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
darling.workspace = true
shared = { path = "../misc/shared" }
