[package]
name = "did_doc"
version = "0.1.0"
edition = "2021"

[features]
jwk = ["public_key/jwk"]

[dependencies]
base64.workspace = true
bs58.workspace = true
did_parser_nom = { path = "../did_parser_nom" }
public_key = { path = "../public_key" }
hex = "0.4.3"
multibase = "0.9.1"
pem = "3.0.4"
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json.workspace = true
uniresid = { version = "0.1.4", default-features = false, features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
display_as_json = { path = "../../misc/display_as_json" }
did_key = { path = "../did_methods/did_key" }
thiserror = "1.0.40"
typed-builder = "0.19.1"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
env_logger = "0.11.3"

