[package]
name = "did_doc"
version = "0.1.0"
edition = "2021"

[features]
jwk = ["public_key/jwk"]

[dependencies]
base64.workspace = true
bs58.workspace = true
did_parser_nom = { path = "../did_parser_nom" }
public_key = { path = "../public_key" }
hex.workspace = true
multibase.workspace = true
pem.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json.workspace = true
uniresid = { workspace = true, default-features = false, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
display_as_json = { path = "../../misc/display_as_json" }
did_key = { path = "../did_methods/did_key" }
thiserror.workspace = true
typed-builder.workspace = true
